added text about pizza

--- a/HMW5.html
+++ b/HMW5.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <h1> this is my new page </h1>
+        <p> Pizza is going to happen here</p>
     </body>
 </html>
