added an image buttons and stuff

--- a/HMW5.html
+++ b/HMW5.html
@@ -2,8 +2,18 @@
 <html>
     <head>
     </head>
+    <title>Pizza</title>
+    <link rel="stylesheet" href="HMW5.css">
+    <script src="HMW5.js"> </script>
     <body>
         <h1> this is my new page </h1>
-        <p> Pizza is going to happen here</p>
+        <div class=""
+            <p> Pizza <span id= "goingID"></span>" going to happen here</p>
+        </div>
+        <h2>Here is some more pizza</h2>
+        <h3>And yet some more pizza</h3>
+        <button>push me</button>
+        <img src="https://fortunedotcom.files.wordpress.com/2016/05/pizza-hut-pepperoni-pizza.jpg" id="pizza" alt="a pepperoni pizza"></img>
+        <a href="http:/google.com">go to google.com</a>
     </body>
 </html>
