changed pixel on pizza

--- a/HMW5.html
+++ b/HMW5.html
@@ -15,5 +15,6 @@
         <button>push me</button>
         <img src="https://fortunedotcom.files.wordpress.com/2016/05/pizza-hut-pepperoni-pizza.jpg" id="pizza" alt="a pepperoni pizza"></img>
         <a href="http:/google.com">go to google.com</a>
+        <input id="my input"/>
     </body>
 </html>
