--- a/HMW5.html
+++ b/HMW5.html
@@ -4,11 +4,14 @@
     </head>
     <title>Pizza</title>
     <link rel="stylesheet" href="HMW5.css">
+    <link rel="stylesheet" href="HMW5extra.css">
     <script src="HMW5.js"> </script>
     <body>
         <h1> this is my new page </h1>
-        <div class=""
-            <p> Pizza <span id= "goingID"></span>" going to happen here</p>
+        <div class="firstText">
+            <p id="para1"> Pizza <span id= "goingID"></span>" going to happen here</p>
+            <button id="btn1"> topping1</button>
+            <button id="btn2"> topping2</button>
         </div>
         <h2>Here is some more pizza</h2>
         <h3>And yet some more pizza</h3>
