added a new button

--- a/HMW5.html
+++ b/HMW5.html
@@ -18,12 +18,13 @@
     <script src="HMW5.js"> </script>
     <body>
         <div class="jumbotron"
-            <h1 id="firstHead"> this is my new page </h1>
+            <h1 id="firstHead"> PIZZA BELLA </h1>
         </div>
         <div class="firstText">
-            <p id="para1"> Pizza is <span id= "goingID">going</span> to happen here</p>
-            <button id="btn1" onclick="changeHead2()"topping1</button>
-            <button id="btn2"> topping2</button>
+            <p id="para1"> GREAT <span id= "goingID">PIZZA</span> HAPPENS HERE</p>
+            <button id="btn1">Pepperoni onclick="changeHead2()"Pepperoni</button>
+            <button id="btn2"> Goat Cheese</button>
+            <button id="btn3"> Meat Lovers</button>
         </div>
         <h2 id="head2">Here is some more pizza</h2>
         <h3>And yet some more pizza</h3>
