--- a/HMW5.html
+++ b/HMW5.html
@@ -22,18 +22,21 @@
         </div>
         <div class="firstText">
             <p id="para1"> GREAT <span id= "goingID">PIZZA</span> HAPPENS HERE</p>
-            <button id="btn1">Pepperoni onclick="changeHead2()"Pepperoni</button>
-            <button id="btn2"> Goat Cheese</button>
+            <button id="btn1" onclick="changeHead2()">Pepperoni</button>
+            <button id="btn2" onclick="changeHead3()">Goat Cheese</button>
             <button id="btn3"> Meat Lovers</button>
         </div>
-        <h2 id="head2">Here is some more pizza</h2>
-        <h3>And yet some more pizza</h3>
+            <h2 id="head2">PIZZA. JUST PIZZA</h2>
+            <h3 id="head3">VEGETARIAN CHOICE WITH GOAT CHEESE</h3>
+            <h3 id="head4">MEAT LOVERS</h3>
         <div class="container-fluid">
             <div class="row">
                 <div class=".col-lg-4"><button onclick="addInputs()" >push me</button></div>
                 <div class=".col-lg-8"> 
-                    <img src="https://fortunedotcom.files.wordpress.com/2016/05/pizza-hut-pepperoni-pizza.jpg" id="pizza" alt="a pepperoni pizza"></img>
-                    <a href="http:/google.com">go to google.com</a>
+                    <img src="pizza_tomatoes_and_basil.jpg" id="pizza" alt="tomatoe and basil"></img>
+                    <img src="pizza_with_ham_and_pineapple.jpg" id="pizza" alt="ham and pineapple"><img>
+                    <img src="meat lovers pizza.jpg" id="pizza" alt="meat lovers"><img>
+                    <a href="">go to google.com</a>
                 <input id="my input"/>
                
             </div>
