--- a/HMW5.html
+++ b/HMW5.html
@@ -48,7 +48,7 @@
                     <img src="pizza_with_ham_and_pineapple.jpg" id="pizza"></img>
                 </div>
                 <div class="col-md-4">
-                    <button id="btn1" onclick="addhamandpineapple()">Ham and Pineapple</button>
+                    <button id="btn1" onclick="addHamAndPineapple()">Ham and Pineapple</button>
                 </div>
                 <div class"col-md-4">
                     <p> $3.00</p>
@@ -60,7 +60,7 @@
                     <img src="meat lovers pizza.jpg" id="pizza"></img>
                 </div>
                 <div class="col-md-4">
-                    <button id="btn1" onclick="addmeatlovers()">Meat Lovers</button>
+                    <button id="btn1" onclick="addMeatLovers()">Meat Lovers</button>
                 </div>
                 <div class="col-md-4">
                     <p> $4.00</p>
